commit translated contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartdatalabelloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartdatalabelloadoptions.yml
@@ -1,155 +1,162 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions:interface'
-    summary: |-
-      表示图表点的数据标签。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartDataLabelLoadOptions
+uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartDataLabelLoadOptions
+summary: >-
+  表示图表点的数据标签。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartDataLabelLoadOptions
-    fullName: Excel.Interfaces.ChartDataLabelLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#position:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#separator:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showBubbleSize:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showCategoryName:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showLegendKey:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showPercentage:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showSeriesName:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showValue:member'
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#position:member'
-    summary: |-
-      表示数据标签的位置的 DataLabelPosition 值。 有关详细信息，请参阅 ChartDataLabelPosition。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#separator:member'
-    summary: |-
-      该字符串表示用于图表中数据标签的分隔符。
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: position
+  uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    表示数据标签的位置的 DataLabelPosition 值。 有关详细信息，请参阅 ChartDataLabelPosition。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: separator
-    fullName: separator
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'separator?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showBubbleSize:member'
-    summary: |-
-      指定数据标签气泡大小是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showBubbleSize
-    fullName: showBubbleSize
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showBubbleSize?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showCategoryName:member'
-    summary: |-
-      指定数据标签类别名称是否可见。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: boolean;'
+    return:
+      type: boolean
+- name: separator
+  uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions#separator:member
+  package: excel!
+  fullName: separator
+  summary: >-
+    该字符串表示用于图表中数据标签的分隔符。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showCategoryName
-    fullName: showCategoryName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showCategoryName?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showLegendKey:member'
-    summary: |-
-      指定数据标签图例标示是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showLegendKey
-    fullName: showLegendKey
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showLegendKey?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showPercentage:member'
-    summary: |-
-      指定数据标签百分比是否可见。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'separator?: boolean;'
+    return:
+      type: boolean
+- name: showBubbleSize
+  uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions#showBubbleSize:member
+  package: excel!
+  fullName: showBubbleSize
+  summary: >-
+    指定数据标签气泡大小是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showPercentage
-    fullName: showPercentage
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showPercentage?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showSeriesName:member'
-    summary: |-
-      指定数据标签系列名称是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showSeriesName
-    fullName: showSeriesName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showSeriesName?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showValue:member'
-    summary: |-
-      指定数据标签值是否可见。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showBubbleSize?: boolean;'
+    return:
+      type: boolean
+- name: showCategoryName
+  uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions#showCategoryName:member
+  package: excel!
+  fullName: showCategoryName
+  summary: >-
+    指定数据标签类别名称是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showValue
-    fullName: showValue
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showValue?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showCategoryName?: boolean;'
+    return:
+      type: boolean
+- name: showLegendKey
+  uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions#showLegendKey:member
+  package: excel!
+  fullName: showLegendKey
+  summary: >-
+    指定数据标签图例标示是否可见。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showLegendKey?: boolean;'
+    return:
+      type: boolean
+- name: showPercentage
+  uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions#showPercentage:member
+  package: excel!
+  fullName: showPercentage
+  summary: >-
+    指定数据标签百分比是否可见。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showPercentage?: boolean;'
+    return:
+      type: boolean
+- name: showSeriesName
+  uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions#showSeriesName:member
+  package: excel!
+  fullName: showSeriesName
+  summary: >-
+    指定数据标签系列名称是否可见。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showSeriesName?: boolean;'
+    return:
+      type: boolean
+- name: showValue
+  uid: excel!Excel.Interfaces.ChartDataLabelLoadOptions#showValue:member
+  package: excel!
+  fullName: showValue
+  summary: >-
+    指定数据标签值是否可见。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showValue?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 8060c6b080182e1910718983bdacfb6f09dfc1f4
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49306805"
