--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookprotectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookprotectionloadoptions.yml
@@ -1,43 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.WorkbookProtectionLoadOptions:interface'
-    summary: |-
-      表示对工作簿对象的保护。
+### YamlMime:TSType
+name: Excel.Interfaces.WorkbookProtectionLoadOptions
+uid: excel!Excel.Interfaces.WorkbookProtectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.WorkbookProtectionLoadOptions
+summary: >-
+  表示对工作簿对象的保护。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.WorkbookProtectionLoadOptions
-    fullName: Excel.Interfaces.WorkbookProtectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.WorkbookProtectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.WorkbookProtectionLoadOptions#protected:member'
-  - uid: 'excel!Excel.Interfaces.WorkbookProtectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorkbookProtectionLoadOptions#protected:member'
-    summary: |-
-      指定工作簿是否受保护。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: protected
-    fullName: protected
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'protected?: boolean;'
-      return:
-        type:
-          - boolean
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.WorkbookProtectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: protected
+  uid: excel!Excel.Interfaces.WorkbookProtectionLoadOptions#protected:member
+  package: excel!
+  fullName: protected
+  summary: >-
+    指定工作簿是否受保护。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'protected?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: a5feb1c8e85fe10e09d93df76121dbd5bca5e23f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49305951"
