--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegenddata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegenddata.yml
@@ -1,192 +1,178 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartLegendData:interface'
-    summary: 描述通过调用返回的数据的接口`chartLegend.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartLegendData
-    fullName: Excel.Interfaces.ChartLegendData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartLegendData#format:member'
-      - 'excel!Excel.Interfaces.ChartLegendData#height:member'
-      - 'excel!Excel.Interfaces.ChartLegendData#left:member'
-      - 'excel!Excel.Interfaces.ChartLegendData#legendEntries:member'
-      - 'excel!Excel.Interfaces.ChartLegendData#overlay:member'
-      - 'excel!Excel.Interfaces.ChartLegendData#position:member'
-      - 'excel!Excel.Interfaces.ChartLegendData#showShadow:member'
-      - 'excel!Excel.Interfaces.ChartLegendData#top:member'
-      - 'excel!Excel.Interfaces.ChartLegendData#visible:member'
-      - 'excel!Excel.Interfaces.ChartLegendData#width:member'
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#format:member'
-    summary: |-
-      表示图表图例的格式，包括填充和字体格式。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartLegendData
+uid: excel!Excel.Interfaces.ChartLegendData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartLegendData
+summary: 描述通过调用返回的数据的接口 `chartLegend.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: format
+  uid: excel!Excel.Interfaces.ChartLegendData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    表示图表图例的格式，包括填充和字体格式。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartLegendFormatData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#height:member'
-    summary: |-
-      指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#left:member'
-    summary: |-
-      指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartLegendFormatData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartLegendFormatData:interface" />
+- name: height
+  uid: excel!Excel.Interfaces.ChartLegendData#height:member
+  package: excel!
+  fullName: height
+  summary: >-
+    指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'left?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#legendEntries:member'
-    summary: |-
-      表示图例中 legendEntries 的集合。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: legendEntries
-    fullName: legendEntries
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'legendEntries?: Excel.Interfaces.ChartLegendEntryData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartLegendData#legendEntries~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#overlay:member'
-    summary: |-
-      指定图表图例是否应与图表的主体重叠。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: number;'
+    return:
+      type: number
+- name: left
+  uid: excel!Excel.Interfaces.ChartLegendData#left:member
+  package: excel!
+  fullName: left
+  summary: >-
+    指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: overlay
-    fullName: overlay
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'overlay?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#position:member'
-    summary: |-
-      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartLegendData#position~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#showShadow:member'
-    summary: |-
-      指定图例在图表上是否有阴影。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'left?: number;'
+    return:
+      type: number
+- name: legendEntries
+  uid: excel!Excel.Interfaces.ChartLegendData#legendEntries:member
+  package: excel!
+  fullName: legendEntries
+  summary: >-
+    表示图例中 legendEntries 的集合。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showShadow
-    fullName: showShadow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showShadow?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#top:member'
-    summary: |-
-      指定图表图例的顶端。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'top?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#visible:member'
-    summary: |-
-      指定 ChartLegend 是否可见。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'legendEntries?: Excel.Interfaces.ChartLegendEntryData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartLegendEntryData:interface" />[]
+- name: overlay
+  uid: excel!Excel.Interfaces.ChartLegendData#overlay:member
+  package: excel!
+  fullName: overlay
+  summary: >-
+    指定图表图例是否应与图表的主体重叠。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#width:member'
-    summary: |-
-      指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: number;'
-      return:
-        type:
-          - number
-references:
-  - uid: 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
-    name: Excel.Interfaces.ChartLegendFormatData
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#legendEntries~0:complex'
-    name: 'Excel.Interfaces.ChartLegendEntryData[]'
-    fullName: 'Excel.Interfaces.ChartLegendEntryData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.ChartLegendEntryData:interface'
-        name: Excel.Interfaces.ChartLegendEntryData
-        fullName: Excel.Interfaces.ChartLegendEntryData
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'excel!Excel.Interfaces.ChartLegendData#position~0:complex'
-    name: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
-    fullName: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartLegendPosition:enum'
-        name: Excel.ChartLegendPosition
-        fullName: Excel.ChartLegendPosition
-      - name: ' | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"'
-        fullName: ' | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"'
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'overlay?: boolean;'
+    return:
+      type: boolean
+- name: position
+  uid: excel!Excel.Interfaces.ChartLegendData#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom";'
+    return:
+      type: <xref uid="excel!Excel.ChartLegendPosition:enum" /> | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
+- name: showShadow
+  uid: excel!Excel.Interfaces.ChartLegendData#showShadow:member
+  package: excel!
+  fullName: showShadow
+  summary: >-
+    指定图例在图表上是否有阴影。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showShadow?: boolean;'
+    return:
+      type: boolean
+- name: top
+  uid: excel!Excel.Interfaces.ChartLegendData#top:member
+  package: excel!
+  fullName: top
+  summary: >-
+    指定图表图例的顶端。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'top?: number;'
+    return:
+      type: number
+- name: visible
+  uid: excel!Excel.Interfaces.ChartLegendData#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定 ChartLegend 是否可见。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+- name: width
+  uid: excel!Excel.Interfaces.ChartLegendData#width:member
+  package: excel!
+  fullName: width
+  summary: >-
+    指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: 4687c21e84de89771cccd2fa4f2ed9105d4b1b40
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49306791"
