--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookupdatedata.yml
@@ -1,30 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.WorkbookUpdateData:interface'
-    summary: '一个用于更新工作簿对象上的数据的接口，可用于`workbook.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.WorkbookUpdateData
-    fullName: Excel.Interfaces.WorkbookUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.WorkbookUpdateData#properties:member'
-  - uid: 'excel!Excel.Interfaces.WorkbookUpdateData#properties:member'
-    summary: |-
-      获取工作簿属性。
+### YamlMime:TSType
+name: Excel.Interfaces.WorkbookUpdateData
+uid: excel!Excel.Interfaces.WorkbookUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.WorkbookUpdateData
+summary: 一个用于更新工作簿对象上的数据的接口，可用于 `workbook.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: properties
+  uid: excel!Excel.Interfaces.WorkbookUpdateData#properties:member
+  package: excel!
+  fullName: properties
+  summary: >-
+    获取工作簿属性。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: properties
-    fullName: properties
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'properties?: Excel.Interfaces.DocumentPropertiesUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData:interface'
-    name: Excel.Interfaces.DocumentPropertiesUpdateData
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'properties?: Excel.Interfaces.DocumentPropertiesUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.DocumentPropertiesUpdateData:interface" />
+metadata:
+  ms.openlocfilehash: 6ff9f12b2f3e2bc03d2d1cc0312c87eb1edfe7ee
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49305881"
