--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.tablechangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.tablechangedeventargs.yml
@@ -1,171 +1,120 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.TableChangedEventArgs:interface'
-    summary: |-
-      提供有关引发 Changed 事件的表的信息。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.TableChangedEventArgs
-    fullName: Excel.TableChangedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.TableChangedEventArgs#address:member'
-      - 'excel!Excel.TableChangedEventArgs#changeType:member'
-      - 'excel!Excel.TableChangedEventArgs#source:member'
-      - 'excel!Excel.TableChangedEventArgs#tableId:member'
-      - 'excel!Excel.TableChangedEventArgs#type:member'
-      - 'excel!Excel.TableChangedEventArgs#worksheetId:member'
-  - uid: 'excel!Excel.TableChangedEventArgs#address:member'
-    summary: |-
-      获取地址，该地址表示特定工作表上的表格的更改区域。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: address
-    fullName: address
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'address: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.TableChangedEventArgs#changeType:member'
-    summary: |-
-      获取更改类型，该类型表示 Changed 事件的触发方式。 有关详细信息，请参阅 DataChangeType。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: changeType
-    fullName: changeType
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'changeType: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted";'
-      return:
-        type:
-          - 'excel!Excel.TableChangedEventArgs#changeType~0:complex'
-  - uid: 'excel!Excel.TableChangedEventArgs#source:member'
-    summary: |-
-      获取事件源。 有关详细信息，请参阅 Excel.EventSource。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: source
-    fullName: source
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'source: Excel.EventSource | "Local" | "Remote";'
-      return:
-        type:
-          - 'excel!Excel.TableChangedEventArgs#source~0:complex'
-  - uid: 'excel!Excel.TableChangedEventArgs#tableId:member'
-    summary: |-
-      获取其中的数据发生更改的表格的 ID。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: tableId
-    fullName: tableId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'tableId: string;'
-      return:
-        type:
-          - string
-        description: |-
+### YamlMime:TSType
+name: Excel.TableChangedEventArgs
+uid: excel!Excel.TableChangedEventArgs:interface
+package: excel!
+fullName: Excel.TableChangedEventArgs
+summary: >-
+  提供有关引发 Changed 事件的表的信息。
 
 
-          #### <a name="examples"></a>示例
-
-          ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/30-events/events-tablecollection-changed.yaml
-          async function onChange(event) {
-              await Excel.run(async (context) => {
-                  let table = context.workbook.tables.getItem(event.tableId);
-                  let worksheet = context.workbook.worksheets.getItem(event.worksheetId);
-                  worksheet.load("name");
-
-                  await context.sync();
-
-                  console.log("Handler for table collection onChanged event has been triggered. Data changed address: " + event.address);
-                  console.log("Table Id : " + event.tableId);
-                  console.log("Worksheet Id : " + worksheet.name);
-              });
-          }
-          ```
-  - uid: 'excel!Excel.TableChangedEventArgs#type:member'
-    summary: |-
-      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type: "TableChanged";'
-      return:
-        type:
-          - '"TableChanged"'
-  - uid: 'excel!Excel.TableChangedEventArgs#worksheetId:member'
-    summary: |-
-      获取其中的数据发生更改的工作表的 ID。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: worksheetId
-    fullName: worksheetId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'worksheetId: string;'
-      return:
-        type:
-          - string
-        description: |-
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: address
+  uid: excel!Excel.TableChangedEventArgs#address:member
+  package: excel!
+  fullName: address
+  summary: >-
+    获取地址，该地址表示特定工作表上的表格的更改区域。
 
 
-          #### <a name="examples"></a>示例
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'address: string;'
+    return:
+      type: string
+- name: changeType
+  uid: excel!Excel.TableChangedEventArgs#changeType:member
+  package: excel!
+  fullName: changeType
+  summary: >-
+    获取更改类型，该类型表示 Changed 事件的触发方式。 有关详细信息，请参阅 DataChangeType。
 
-          ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/30-events/events-tablecollection-changed.yaml
-          async function onChange(event) {
-              await Excel.run(async (context) => {
-                  let table = context.workbook.tables.getItem(event.tableId);
-                  let worksheet = context.workbook.worksheets.getItem(event.worksheetId);
-                  worksheet.load("name");
 
-                  await context.sync();
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'changeType: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted";'
+    return:
+      type: <xref uid="excel!Excel.DataChangeType:enum" /> | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
+- name: source
+  uid: excel!Excel.TableChangedEventArgs#source:member
+  package: excel!
+  fullName: source
+  summary: >-
+    获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-                  console.log("Handler for table collection onChanged event has been triggered. Data changed address: " + event.address);
-                  console.log("Table Id : " + event.tableId);
-                  console.log("Worksheet Id : " + worksheet.name);
-              });
-          }
-          ```
-references:
-  - uid: 'excel!Excel.TableChangedEventArgs#changeType~0:complex'
-    name: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
-    fullName: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
-    spec.typeScript:
-      - uid: 'excel!Excel.DataChangeType:enum'
-        name: Excel.DataChangeType
-        fullName: Excel.DataChangeType
-      - name: ' | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"'
-        fullName: ' | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"'
-  - uid: 'excel!Excel.TableChangedEventArgs#source~0:complex'
-    name: Excel.EventSource | "Local" | "Remote"
-    fullName: Excel.EventSource | "Local" | "Remote"
-    spec.typeScript:
-      - uid: 'excel!Excel.EventSource:enum'
-        name: Excel.EventSource
-        fullName: Excel.EventSource
-      - name: ' | "Local" | "Remote"'
-        fullName: ' | "Local" | "Remote"'
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'source: Excel.EventSource | "Local" | "Remote";'
+    return:
+      type: <xref uid="excel!Excel.EventSource:enum" /> | "Local" | "Remote"
+- name: tableId
+  uid: excel!Excel.TableChangedEventArgs#tableId:member
+  package: excel!
+  fullName: tableId
+  summary: >-
+    获取其中的数据发生更改的表格的 ID。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'tableId: string;'
+    return:
+      type: string
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```typescript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/30-events/events-tablecollection-changed.yaml\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
+- name: type
+  uid: excel!Excel.TableChangedEventArgs#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type: "TableChanged";'
+    return:
+      type: "\"TableChanged\""
+- name: worksheetId
+  uid: excel!Excel.TableChangedEventArgs#worksheetId:member
+  package: excel!
+  fullName: worksheetId
+  summary: >-
+    获取其中的数据发生更改的工作表的 ID。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'worksheetId: string;'
+    return:
+      type: string
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```typescript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/30-events/events-tablecollection-changed.yaml\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
+metadata:
+  ms.openlocfilehash: 8984a79aa3e5d8d84751bf890c665032eb53f7bb
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49305734"
