commit translated contents

--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemloadoptions.yml
@@ -1,91 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions:interface'
-    summary: |-
-      表示单元格区域或值的定义名称。 名称可以是命名为对象的基元（如下面的类型中所示）、range 对象或对区域的引用。 此对象可用于获取与名称相关的 range 对象。
+### YamlMime:TSType
+name: Excel.Interfaces.NamedItemLoadOptions
+uid: excel!Excel.Interfaces.NamedItemLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.NamedItemLoadOptions
+summary: >-
+  表示单元格区域或值的定义名称。 名称可以是基元命名的对象 (如下面的类型) 、range 对象或对区域的引用所示。 此对象可用于获取与名称相关的 range 对象。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.NamedItemLoadOptions
-    fullName: Excel.Interfaces.NamedItemLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.NamedItemLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.NamedItemLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.NamedItemLoadOptions#type:member'
-      - 'excel!Excel.Interfaces.NamedItemLoadOptions#value:member'
-      - 'excel!Excel.Interfaces.NamedItemLoadOptions#visible:member'
-  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#name:member'
-    summary: |-
-      对象的名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#type:member'
-    summary: |-
-      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.NamedItemLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.NamedItemLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    对象的名称。
 
-      \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#value:member'
-    summary: |-
-      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'value?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#visible:member'
-    summary: |-
-      指定对象是否可见。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: type
+  uid: excel!Excel.Interfaces.NamedItemLoadOptions#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: boolean;'
+    return:
+      type: boolean
+- name: value
+  uid: excel!Excel.Interfaces.NamedItemLoadOptions#value:member
+  package: excel!
+  fullName: value
+  summary: >-
+    表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'value?: boolean;'
+    return:
+      type: boolean
+- name: visible
+  uid: excel!Excel.Interfaces.NamedItemLoadOptions#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定对象是否可见。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: b63a38556c6d64415f68006258a422766151d85b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49311173"
