--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.formatprotectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.formatprotectionupdatedata.yml
@@ -1,43 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.FormatProtectionUpdateData:interface'
-    summary: '一个用于更新 FormatProtection 对象上的数据的接口，可用于`formatProtection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.FormatProtectionUpdateData
-    fullName: Excel.Interfaces.FormatProtectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.FormatProtectionUpdateData#formulaHidden:member'
-      - 'excel!Excel.Interfaces.FormatProtectionUpdateData#locked:member'
-  - uid: 'excel!Excel.Interfaces.FormatProtectionUpdateData#formulaHidden:member'
-    summary: |-
-      指定 Excel 是否隐藏区域中单元格的公式。 指示整个区域不具有统一公式隐藏设置的空值。
+### YamlMime:TSType
+name: Excel.Interfaces.FormatProtectionUpdateData
+uid: excel!Excel.Interfaces.FormatProtectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.FormatProtectionUpdateData
+summary: 一个用于更新 FormatProtection 对象上的数据的接口，可用于 `formatProtection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: formulaHidden
+  uid: excel!Excel.Interfaces.FormatProtectionUpdateData#formulaHidden:member
+  package: excel!
+  fullName: formulaHidden
+  summary: >-
+    指定 Excel 是否隐藏区域中单元格的公式。 指示整个区域不具有统一公式隐藏设置的空值。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulaHidden
-    fullName: formulaHidden
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulaHidden?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FormatProtectionUpdateData#locked:member'
-    summary: |-
-      指定 Excel 是否锁定对象中的单元格。 指示整个区域不具有统一锁定设置的空值。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: locked
-    fullName: locked
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'locked?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulaHidden?: boolean;'
+    return:
+      type: boolean
+- name: locked
+  uid: excel!Excel.Interfaces.FormatProtectionUpdateData#locked:member
+  package: excel!
+  fullName: locked
+  summary: >-
+    指定 Excel 是否锁定对象中的单元格。 指示整个区域不具有统一锁定设置的空值。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'locked?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: d27c71c1be9ca1f6fe39fc7559bbf8e2893592b1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49311502"
