--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemcollectionloadoptions.yml
@@ -1,91 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions:interface'
-    summary: |-
-      属于工作簿或工作表的所有 NamedItem 对象的集合，具体取决于它的访问方式。
+### YamlMime:TSType
+name: Excel.Interfaces.NamedItemCollectionLoadOptions
+uid: excel!Excel.Interfaces.NamedItemCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.NamedItemCollectionLoadOptions
+summary: >-
+  属于工作簿或工作表的所有 NamedItem 对象的集合，具体取决于它的访问方式。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.NamedItemCollectionLoadOptions
-    fullName: Excel.Interfaces.NamedItemCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#type:member'
-      - 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#value:member'
-      - 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#visible:member'
-  - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#name:member'
-    summary: |-
-      对于集合中的每一项：对象的名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#type:member'
-    summary: |-
-      对于集合中的每一项：指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.NamedItemCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.NamedItemCollectionLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    对于集合中的每一项：对象的名称。
 
-      \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#value:member'
-    summary: |-
-      对于集合中的每一项：代表由名称的公式计算的值。 对于已命名区域，将返回区域地址。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'value?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#visible:member'
-    summary: |-
-      对于集合中的每一项：指定该对象是否可见。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: type
+  uid: excel!Excel.Interfaces.NamedItemCollectionLoadOptions#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    对于集合中的每一项：指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: boolean;'
+    return:
+      type: boolean
+- name: value
+  uid: excel!Excel.Interfaces.NamedItemCollectionLoadOptions#value:member
+  package: excel!
+  fullName: value
+  summary: >-
+    对于集合中的每一项：代表由名称的公式计算的值。 对于已命名区域，将返回区域地址。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'value?: boolean;'
+    return:
+      type: boolean
+- name: visible
+  uid: excel!Excel.Interfaces.NamedItemCollectionLoadOptions#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    对于集合中的每一项：指定该对象是否可见。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 553cf336f4d29ecf84691c12d94fd857ccbe86ca
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49311208"
