--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemupdatedata.yml
@@ -1,27 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.NamedItemUpdateData:interface'
-    summary: '一个用于更新 NamedItem 对象上的数据的接口，可用于`namedItem.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.NamedItemUpdateData
-    fullName: Excel.Interfaces.NamedItemUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.NamedItemUpdateData#visible:member'
-  - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#visible:member'
-    summary: |-
-      指定对象是否可见。
+### YamlMime:TSType
+name: Excel.Interfaces.NamedItemUpdateData
+uid: excel!Excel.Interfaces.NamedItemUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.NamedItemUpdateData
+summary: 一个用于更新 NamedItem 对象上的数据的接口，可用于 `namedItem.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: visible
+  uid: excel!Excel.Interfaces.NamedItemUpdateData#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定对象是否可见。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 436387fcaa5d39ff724384c8c9cfabf51597f5a7
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49311124"
