commit translated contents

--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.conditionalformatruleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.conditionalformatruleupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData:interface'
-    summary: '一个用于更新 ConditionalFormatRule 对象上的数据的接口，可用于`conditionalFormatRule.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ConditionalFormatRuleUpdateData
-    fullName: Excel.Interfaces.ConditionalFormatRuleUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalFormatRuleUpdateData
+uid: excel!Excel.Interfaces.ConditionalFormatRuleUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalFormatRuleUpdateData
+summary: 一个用于更新 ConditionalFormatRule 对象上的数据的接口，可用于 `conditionalFormatRule.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: e133e45f5b37f7f2fdf1fba9a18a475c96c3d75c
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49314295"
