--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.filterpivothierarchycollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.filterpivothierarchycollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData:interface'
-    summary: '一个用于更新 FilterPivotHierarchyCollection 对象上的数据的接口，可用于`filterPivotHierarchyCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData
-    fullName: Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.FilterPivotHierarchyData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.FilterPivotHierarchyData[]'
-    fullName: 'Excel.Interfaces.FilterPivotHierarchyData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyData:interface'
-        name: Excel.Interfaces.FilterPivotHierarchyData
-        fullName: Excel.Interfaces.FilterPivotHierarchyData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData
+uid: excel!Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData
+summary: 一个用于更新 FilterPivotHierarchyCollection 对象上的数据的接口，可用于 `filterPivotHierarchyCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.FilterPivotHierarchyData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.FilterPivotHierarchyData:interface" />[]
+metadata:
+  ms.openlocfilehash: af93e291bac8dfb79997df76f4fa020ed5669dc8
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49314071"
