--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.pivotfieldcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.pivotfieldcollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotFieldCollectionUpdateData:interface'
-    summary: '一个用于更新 PivotFieldCollection 对象上的数据的接口，可用于`pivotFieldCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.PivotFieldCollectionUpdateData
-    fullName: Excel.Interfaces.PivotFieldCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotFieldCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.PivotFieldCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.PivotFieldData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.PivotFieldCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.PivotFieldCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.PivotFieldData[]'
-    fullName: 'Excel.Interfaces.PivotFieldData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.PivotFieldData:interface'
-        name: Excel.Interfaces.PivotFieldData
-        fullName: Excel.Interfaces.PivotFieldData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.PivotFieldCollectionUpdateData
+uid: excel!Excel.Interfaces.PivotFieldCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotFieldCollectionUpdateData
+summary: 一个用于更新 PivotFieldCollection 对象上的数据的接口，可用于 `pivotFieldCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.PivotFieldCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.PivotFieldData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.PivotFieldData:interface" />[]
+metadata:
+  ms.openlocfilehash: 050377a6d480d3c6c07538a9d95a18c69bd430d6
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49313875"
