--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.conditionaldatabarnegativeformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.conditionaldatabarnegativeformatdata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData:interface'
-    summary: 描述通过调用返回的数据的接口`conditionalDataBarNegativeFormat.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ConditionalDataBarNegativeFormatData
-    fullName: Excel.Interfaces.ConditionalDataBarNegativeFormatData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalDataBarNegativeFormatData
+uid: excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalDataBarNegativeFormatData
+summary: 描述通过调用返回的数据的接口 `conditionalDataBarNegativeFormat.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: a260364b3eb96b5b4f3f7950146a409e341f9c4b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49314337"
