--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.conditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.conditionalformatdata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalFormatData:interface'
-    summary: 描述通过调用返回的数据的接口`conditionalFormat.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ConditionalFormatData
-    fullName: Excel.Interfaces.ConditionalFormatData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalFormatData
+uid: excel!Excel.Interfaces.ConditionalFormatData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalFormatData
+summary: 描述通过调用返回的数据的接口 `conditionalFormat.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: b3120f414ff817d6d8de534c62f51a8bf6d428b2
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49314302"
