--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.datapivothierarchycollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.datapivothierarchycollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyCollectionUpdateData:interface'
-    summary: '一个用于更新 DataPivotHierarchyCollection 对象上的数据的接口，可用于`dataPivotHierarchyCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
-    fullName: Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.DataPivotHierarchyCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.DataPivotHierarchyData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.DataPivotHierarchyCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.DataPivotHierarchyData[]'
-    fullName: 'Excel.Interfaces.DataPivotHierarchyData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData:interface'
-        name: Excel.Interfaces.DataPivotHierarchyData
-        fullName: Excel.Interfaces.DataPivotHierarchyData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
+uid: excel!Excel.Interfaces.DataPivotHierarchyCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.DataPivotHierarchyCollectionUpdateData
+summary: 一个用于更新 DataPivotHierarchyCollection 对象上的数据的接口，可用于 `dataPivotHierarchyCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.DataPivotHierarchyCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.DataPivotHierarchyData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.DataPivotHierarchyData:interface" />[]
+metadata:
+  ms.openlocfilehash: 3bc14b9de25dd3ec23eecbad3224f7f6428c2613
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49314155"
