--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.datavalidationupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.datavalidationupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.DataValidationUpdateData:interface'
-    summary: '一个用于更新 DataValidation 对象上的数据的接口，可用于`dataValidation.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.DataValidationUpdateData
-    fullName: Excel.Interfaces.DataValidationUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.DataValidationUpdateData
+uid: excel!Excel.Interfaces.DataValidationUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.DataValidationUpdateData
+summary: 一个用于更新 DataValidation 对象上的数据的接口，可用于 `dataValidation.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: b037d18e779b0b0a7718a101ccb57cfd4cbae4c3
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49314128"
