--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.filterdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.filterdata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.FilterData:interface'
-    summary: 描述通过调用返回的数据的接口`filter.toJSON()`<!-- -->.
-    name: Excel.Interfaces.FilterData
-    fullName: Excel.Interfaces.FilterData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.FilterData
+uid: excel!Excel.Interfaces.FilterData:interface
+package: excel!
+fullName: Excel.Interfaces.FilterData
+summary: 描述通过调用返回的数据的接口 `filter.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: b2297b12c805b523a2e3d0aa61d67ab35fe515e4
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49314085"
