--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.formatprotectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.formatprotectionupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.FormatProtectionUpdateData:interface'
-    summary: '一个用于更新 FormatProtection 对象上的数据的接口，可用于`formatProtection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.FormatProtectionUpdateData
-    fullName: Excel.Interfaces.FormatProtectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.FormatProtectionUpdateData
+uid: excel!Excel.Interfaces.FormatProtectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.FormatProtectionUpdateData
+summary: 一个用于更新 FormatProtection 对象上的数据的接口，可用于 `formatProtection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 0e487568a8d093a54cb2d3320b74f3c3b63f39ad
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49314050"
