--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.pagelayoutupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.pagelayoutupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PageLayoutUpdateData:interface'
-    summary: '一个用于更新页面布局对象上的数据的接口，可用于`pageLayout.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.PageLayoutUpdateData
-    fullName: Excel.Interfaces.PageLayoutUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.PageLayoutUpdateData
+uid: excel!Excel.Interfaces.PageLayoutUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.PageLayoutUpdateData
+summary: 一个用于更新页面布局对象上的数据的接口，可用于 `pageLayout.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 23bb43481f322b4a5b7d31323b9dc59c17a4f157
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49313896"
