--- a/docs/docs-ref-autogen/excel_1_11/excel/excel.interfaces.removeduplicatesresultdata.yml
+++ b/docs/docs-ref-autogen/excel_1_11/excel/excel.interfaces.removeduplicatesresultdata.yml
@@ -1,43 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RemoveDuplicatesResultData:interface'
-    summary: 描述通过调用返回的数据的接口`removeDuplicatesResult.toJSON()`<!-- -->.
-    name: Excel.Interfaces.RemoveDuplicatesResultData
-    fullName: Excel.Interfaces.RemoveDuplicatesResultData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RemoveDuplicatesResultData#removed:member'
-      - 'excel!Excel.Interfaces.RemoveDuplicatesResultData#uniqueRemaining:member'
-  - uid: 'excel!Excel.Interfaces.RemoveDuplicatesResultData#removed:member'
-    summary: |-
-      由操作删除的重复行数。
+### YamlMime:TSType
+name: Excel.Interfaces.RemoveDuplicatesResultData
+uid: excel!Excel.Interfaces.RemoveDuplicatesResultData:interface
+package: excel!
+fullName: Excel.Interfaces.RemoveDuplicatesResultData
+summary: 描述通过调用返回的数据的接口 `removeDuplicatesResult.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: removed
+  uid: excel!Excel.Interfaces.RemoveDuplicatesResultData#removed:member
+  package: excel!
+  fullName: removed
+  summary: >-
+    由操作删除的重复行数。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: removed
-    fullName: removed
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'removed?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.RemoveDuplicatesResultData#uniqueRemaining:member'
-    summary: |-
-      所生成的区域中存在的剩余唯一行数。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: uniqueRemaining
-    fullName: uniqueRemaining
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'uniqueRemaining?: number;'
-      return:
-        type:
-          - number
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'removed?: number;'
+    return:
+      type: number
+- name: uniqueRemaining
+  uid: excel!Excel.Interfaces.RemoveDuplicatesResultData#uniqueRemaining:member
+  package: excel!
+  fullName: uniqueRemaining
+  summary: >-
+    所生成的区域中存在的剩余唯一行数。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'uniqueRemaining?: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: 0a62db4f8efc76d522ea7b634b3b1b48b9099f09
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49313854"
