commit translated contents

--- a/docs/docs-ref-autogen/word_1_2/word/word.cellpaddinglocation.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.cellpaddinglocation.yml
@@ -1,43 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.CellPaddingLocation:enum'
-    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
-    name: Word.CellPaddingLocation
-    fullName: Word.CellPaddingLocation
-    langs:
-      - typeScript
-    type: enum
-    package: word!
-    children:
-      - 'word!Word.CellPaddingLocation.bottom:member'
-      - 'word!Word.CellPaddingLocation.left:member'
-      - 'word!Word.CellPaddingLocation.right:member'
-      - 'word!Word.CellPaddingLocation.top:member'
-  - uid: 'word!Word.CellPaddingLocation.bottom:member'
-    name: bottom
-    fullName: bottom
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Bottom"'
-  - uid: 'word!Word.CellPaddingLocation.left:member'
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Left"'
-  - uid: 'word!Word.CellPaddingLocation.right:member'
-    name: right
-    fullName: right
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Right"'
-  - uid: 'word!Word.CellPaddingLocation.top:member'
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Top"'
+### YamlMime:TSEnum
+name: Word.CellPaddingLocation
+uid: word!Word.CellPaddingLocation:enum
+package: word!
+fullName: Word.CellPaddingLocation
+summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: bottom
+  uid: word!Word.CellPaddingLocation.bottom:member
+  package: word!
+  summary: ''
+- name: left
+  uid: word!Word.CellPaddingLocation.left:member
+  package: word!
+  summary: ''
+- name: right
+  uid: word!Word.CellPaddingLocation.right:member
+  package: word!
+  summary: ''
+- name: top
+  uid: word!Word.CellPaddingLocation.top:member
+  package: word!
+  summary: ''
+metadata:
+  ms.openlocfilehash: c8105ec5740d25613163f65e60ae5b1b2c8fbd40
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328051"
