--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.documentupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.documentupdatedata.yml
@@ -1,30 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.DocumentUpdateData:interface'
-    summary: '一个用于更新 Document 对象上的数据的接口，可用于`document.set({ ... })`<!-- -->.'
-    name: Word.Interfaces.DocumentUpdateData
-    fullName: Word.Interfaces.DocumentUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.DocumentUpdateData#body:member'
-  - uid: 'word!Word.Interfaces.DocumentUpdateData#body:member'
-    summary: |-
-      获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。
+### YamlMime:TSType
+name: Word.Interfaces.DocumentUpdateData
+uid: word!Word.Interfaces.DocumentUpdateData:interface
+package: word!
+fullName: Word.Interfaces.DocumentUpdateData
+summary: 一个用于更新 Document 对象上的数据的接口，可用于 `document.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: body
+  uid: word!Word.Interfaces.DocumentUpdateData#body:member
+  package: word!
+  fullName: body
+  summary: >-
+    获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: body
-    fullName: body
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'body?: Word.Interfaces.BodyUpdateData;'
-      return:
-        type:
-          - 'word!Word.Interfaces.BodyUpdateData:interface'
-references:
-  - uid: 'word!Word.Interfaces.BodyUpdateData:interface'
-    name: Word.Interfaces.BodyUpdateData
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'body?: Word.Interfaces.BodyUpdateData;'
+    return:
+      type: <xref uid="word!Word.Interfaces.BodyUpdateData:interface" />
+metadata:
+  ms.openlocfilehash: b584d5408b084bac2e3c5d69f2f3f4e254057a06
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328121"
