--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tabledata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tabledata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.TableData:interface'
-    summary: 描述通过调用返回的数据的接口`table.toJSON()`<!-- -->.
-    name: Word.Interfaces.TableData
-    fullName: Word.Interfaces.TableData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
+### YamlMime:TSType
+name: Word.Interfaces.TableData
+uid: word!Word.Interfaces.TableData:interface
+package: word!
+fullName: Word.Interfaces.TableData
+summary: 描述通过调用返回的数据的接口 `table.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 78b2b7bd5ba64ee339cce999df39fea617152978
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328114"
