--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.bodyloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.bodyloadoptions.yml
@@ -1,96 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.BodyLoadOptions:interface'
-    summary: |-
-      表示文档或节的正文。
+### YamlMime:TSType
+name: Word.Interfaces.BodyLoadOptions
+uid: word!Word.Interfaces.BodyLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.BodyLoadOptions
+summary: >-
+  表示文档或节的正文。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.Interfaces.BodyLoadOptions
-    fullName: Word.Interfaces.BodyLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.BodyLoadOptions#$all:member'
-      - 'word!Word.Interfaces.BodyLoadOptions#font:member'
-      - 'word!Word.Interfaces.BodyLoadOptions#parentContentControl:member'
-      - 'word!Word.Interfaces.BodyLoadOptions#style:member'
-      - 'word!Word.Interfaces.BodyLoadOptions#text:member'
-  - uid: 'word!Word.Interfaces.BodyLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.BodyLoadOptions#font:member'
-    summary: |-
-      获取正文的文本格式。 使用此属性可获取和设置字体名称、大小、颜色和其他属性。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: font
-    fullName: font
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'font?: Word.Interfaces.FontLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.FontLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.BodyLoadOptions#parentContentControl:member'
-    summary: |-
-      获取包含正文的内容控件。 如果没有父内容控件，则会引发错误。
+  \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.BodyLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: font
+  uid: word!Word.Interfaces.BodyLoadOptions#font:member
+  package: word!
+  fullName: font
+  summary: >-
+    获取正文的文本格式。 使用此属性可获取和设置字体名称、大小、颜色和其他属性。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentContentControl
-    fullName: parentContentControl
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentContentControl?: Word.Interfaces.ContentControlLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.ContentControlLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.BodyLoadOptions#style:member'
-    summary: |-
-      获取或设置 body 的样式名称。请对自定义样式和本地化样式名称使用此属性。若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.BodyLoadOptions#text:member'
-    summary: |-
-      获取正文的文本。 使用 insertText 方法插入文本。 只读。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'font?: Word.Interfaces.FontLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.FontLoadOptions:interface" />
+- name: parentContentControl
+  uid: word!Word.Interfaces.BodyLoadOptions#parentContentControl:member
+  package: word!
+  fullName: parentContentControl
+  summary: >-
+    获取包含正文的内容控件。 如果没有父内容控件，则会引发错误。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: text
-    fullName: text
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'text?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'word!Word.Interfaces.FontLoadOptions:interface'
-    name: Word.Interfaces.FontLoadOptions
-  - uid: 'word!Word.Interfaces.ContentControlLoadOptions:interface'
-    name: Word.Interfaces.ContentControlLoadOptions
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentContentControl?: Word.Interfaces.ContentControlLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.ContentControlLoadOptions:interface" />
+- name: style
+  uid: word!Word.Interfaces.BodyLoadOptions#style:member
+  package: word!
+  fullName: style
+  summary: >-
+    获取或设置 body 的样式名称。请对自定义样式和本地化样式名称使用此属性。若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style?: boolean;'
+    return:
+      type: boolean
+- name: text
+  uid: word!Word.Interfaces.BodyLoadOptions#text:member
+  package: word!
+  fullName: text
+  summary: >-
+    获取正文的文本。 使用 insertText 方法插入文本。 只读。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'text?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: bc5033d22631cd0124606d11159638c0f626cdb5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328058"
